created more horizontal space on search bar on home page

--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -27,6 +27,8 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, #2A2A2A 0%, #1A1A1A 50%, #0F0F0F 100%);
+            min-height: 100vh;
         }
         
         .gradient-text {
