--- a/business-dashboard.html
+++ b/business-dashboard.html
@@ -17,7 +17,8 @@
             font-family: 'Inter', sans-serif; 
             line-height: 1.6; 
             color: #ffffff; 
-            background: #000000; 
+            background: linear-gradient(135deg, #2A2A2A 0%, #1A1A1A 50%, #0F0F0F 100%);
+            min-height: 100vh;
         }
         
         .container { 
