--- a/business-register.html
+++ b/business-register.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Inter', sans-serif; line-height: 1.6; color: #ffffff; background: #000000; }
+        body { font-family: 'Inter', sans-serif; line-height: 1.6; color: #ffffff; background: linear-gradient(135deg, #2A2A2A 0%, #1A1A1A 50%, #0F0F0F 100%); min-height: 100vh; }
         .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
         
         /* Navigation */
