--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="index.html" class="text-2xl font-bold text-white hover:text-neon-pink transition-colors duration-300">BlkPages</a>
+                    <a href="index.html" class="text-2xl font-bold text-white hover:text-neon-pink transition-colors duration-300">BlkPages xx</a>
                 </div>
                 <!-- Desktop Navigation -->
                 <div class="hidden lg:flex items-center space-x-8">
@@ -405,7 +405,7 @@
         <div class="absolute inset-0 bg-charcoal/70"></div>
         <div class="relative z-10 text-center px-4 sm:px-6 lg:px-8 max-w-4xl mx-auto">
             <h1 class="text-5xl sm:text-6xl lg:text-7xl font-bold mb-6 text-white animate-fade-in">
-                BlkPages
+                BlkPages xx
             </h1>
             <p class="text-lg sm:text-xl lg:text-2xl font-medium mb-12 text-text-secondary animate-slide-up">
                 Find Black-owned Businesses Near You
@@ -865,7 +865,7 @@
     <footer class="bg-charcoal/90 backdrop-blur-md border-t border-white/10 py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center">
-                <span class="text-2xl font-bold text-text-primary mb-4 block">BlkPages</span>
+                <span class="text-2xl font-bold text-text-primary mb-4 block">BlkPages xx</span>
                 <p class="text-text-secondary mb-8">Supporting Black-owned businesses, one search at a time.</p>
                 <div class="flex justify-center space-x-8 text-text-secondary mb-6">
                     <a href="about.html" class="hover:text-neon-pink transition-colors font-medium">About</a>
