--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         }
         
         .search-glow:focus {
-            box-shadow: 0 0 30px rgba(255, 107, 107, 0.6);
-            border-color: #ff6b6b;
+            box-shadow: 0 0 30px rgba(33, 150, 243, 0.6);
+            border-color: #2196f3;
         }
         
         .category-card {
@@ -419,13 +419,13 @@
                         <input 
                             type="text" 
                             placeholder="What are you looking for?" 
-                            class="w-full px-4 py-2.5 rounded-xl bg-charcoal-light/80 backdrop-blur-md border border-white/20 text-text-primary placeholder-text-muted focus:outline-none focus:border-neon-pink focus:ring-2 focus:ring-neon-pink/20 transition-all duration-300 text-base"
+                            class="w-full px-4 py-2.5 rounded-xl bg-charcoal-light/80 backdrop-blur-md border border-white/20 text-text-primary placeholder-text-muted focus:outline-none focus:border-neon-blue focus:ring-2 focus:ring-neon-blue/20 transition-all duration-300 text-base"
                             required
                         >
                         <input 
                             type="text" 
                             placeholder="Location" 
-                            class="w-full px-4 py-2.5 rounded-xl bg-charcoal-light/80 backdrop-blur-md border border-white/20 text-text-primary placeholder-text-muted focus:outline-none focus:border-neon-pink focus:ring-2 focus:ring-neon-pink/20 transition-all duration-300 text-base"
+                            class="w-full px-4 py-2.5 rounded-xl bg-charcoal-light/80 backdrop-blur-md border border-white/20 text-text-primary placeholder-text-muted focus:outline-none focus:border-neon-blue focus:ring-2 focus:ring-neon-blue/20 transition-all duration-300 text-base"
                             required
                         >
                         <div class="flex gap-2">
@@ -451,7 +451,7 @@
                             <input 
                                 type="text" 
                                 placeholder="Search for services, businesses..." 
-                                class="w-full px-4 py-2.5 rounded-xl bg-charcoal-light/80 backdrop-blur-md border border-white/20 text-text-primary placeholder-text-muted focus:outline-none focus:border-neon-pink focus:ring-2 focus:ring-neon-pink/20 transition-all duration-300 text-base"
+                                class="w-full px-4 py-2.5 rounded-xl bg-charcoal-light/80 backdrop-blur-md border border-white/20 text-text-primary placeholder-text-muted focus:outline-none focus:border-neon-blue focus:ring-2 focus:ring-neon-blue/20 transition-all duration-300 text-base"
                                 required
                             >
                         </div>
@@ -459,7 +459,7 @@
                             <input 
                                 type="text" 
                                 placeholder="City, Area, Postcode" 
-                                class="w-full px-4 py-2.5 rounded-xl bg-charcoal-light/80 backdrop-blur-md border border-white/20 text-text-primary placeholder-text-muted focus:outline-none focus:border-neon-pink focus:ring-2 focus:ring-neon-pink/20 transition-all duration-300 text-base"
+                                class="w-full px-4 py-2.5 rounded-xl bg-charcoal-light/80 backdrop-blur-md border border-white/20 text-text-primary placeholder-text-muted focus:outline-none focus:border-neon-blue focus:ring-2 focus:ring-neon-blue/20 transition-all duration-300 text-base"
                                 required
                             >
                         </div>
