--- a/offers.html
+++ b/offers.html
@@ -124,7 +124,7 @@
                 <div class="hidden lg:flex items-center space-x-8">
                         <div class="flex items-baseline space-x-8">
                             <a href="index.html#home" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Home</a>
-                            <a href="search.html" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Browse</a>
+                            <a href="search-results.html" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Browse</a>
                             <a href="offers.html" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Offers</a>
                             <a href="blog.html" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Blog</a>
                         </div>
@@ -158,7 +158,7 @@
                     <!-- Navigation Links -->
                         <div class="space-y-3">
                             <a href="index.html#home" class="block text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium py-2" onclick="closeMobileMenu()">Home</a>
-                            <a href="search.html" class="block text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium py-2" onclick="closeMobileMenu()">Browse</a>
+                            <a href="search-results.html" class="block text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium py-2" onclick="closeMobileMenu()">Browse</a>
                             <a href="offers.html" class="block text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium py-2" onclick="closeMobileMenu()">Offers</a>
                             <a href="blog.html" class="block text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium py-2" onclick="closeMobileMenu()">Blog</a>
                         </div>
