--- a/index.html
+++ b/index.html
@@ -398,8 +398,9 @@
     <section id="home" class="hero-bg relative min-h-screen flex items-center justify-center">
         <div class="absolute inset-0 bg-charcoal/70"></div>
         <div class="relative z-10 text-center px-4 sm:px-6 lg:px-8 max-w-4xl mx-auto">
-            <h1 class="text-5xl sm:text-6xl lg:text-7xl font-bold mb-6 text-white animate-fade-in">
-                BlkPages <span class="text-neon-pink">×</span>
+            <h1 class="text-5xl sm:text-6xl lg:text-7xl font-bold mb-6 text-white animate-fade-in flex items-center justify-center gap-3">
+                BlkPages.
+                <i class="fas fa-heart text-neon-pink animate-pulse"></i>
             </h1>
             <p class="text-lg sm:text-xl lg:text-2xl font-medium mb-12 text-text-secondary animate-slide-up">
                 Find Black-owned Businesses Near You
