updated business profile bookings

--- a/search-results.html
+++ b/search-results.html
@@ -87,6 +87,31 @@
             background-position: center;
             background-attachment: fixed;
         }
+
+        /* Back Button Styling */
+        .back-btn {
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 6px;
+            color: #ffffff;
+            padding: 0.5rem 1rem;
+            font-size: 0.9rem;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .back-btn:hover {
+            background: rgba(33, 150, 243, 0.2);
+            border-color: rgba(33, 150, 243, 0.4);
+            transform: translateX(-2px);
+        }
+
+        .back-btn i {
+            font-size: 0.8rem;
+        }
     </style>
 </head>
 <body class="bg-charcoal text-white font-inter">
@@ -95,6 +120,10 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
+                    <button onclick="goBack()" class="back-btn mr-4">
+                        <i class="fas fa-arrow-left"></i>
+                        <span>Back</span>
+                    </button>
                     <a href="index.html" class="text-2xl font-bold text-white hover:text-neon-blue transition-colors duration-300">BlkPages</a>
                 </div>
                 <!-- Desktop Navigation -->
@@ -895,6 +924,16 @@
             displaySearchResults(businessData);
             hideAdvancedControls();
         });
+
+        // Back button function
+        function goBack() {
+            if (window.history.length > 1) {
+                window.history.back();
+            } else {
+                // If no history, go to homepage
+                window.location.href = 'index.html';
+            }
+        }
     </script>
 </body>
 </html>
