multiple chaned to the why list page

--- a/business-dashboard.html
+++ b/business-dashboard.html
@@ -559,29 +559,51 @@
                 <!-- Subscription -->
                 <div class="card">
                     <h3>Subscription Plan</h3>
-                    <div style="background: #2A2A2A; padding: 1.5rem; border-radius: 10px; margin-bottom: 1.5rem;">
-                        <div style="font-size: 1.2rem; font-weight: 600; color: #ffffff; margin-bottom: 0.5rem;">Premium Listing</div>
-                        <div style="font-size: 1.5rem; font-weight: 700; color: #FF3CAC; margin-bottom: 1rem;">£19/month</div>
+                    <div style="background: #2A2A2A; padding: 1.5rem; border-radius: 10px;">
+                        <div style="font-size: 1.2rem; font-weight: 600; color: #ffffff; margin-bottom: 0.5rem;">Professional Plan</div>
+                        <div style="font-size: 1.5rem; font-weight: 700; color: #FF3CAC; margin-bottom: 0.5rem;">£29/month</div>
+                        <div style="font-size: 0.9rem; color: #cccccc; margin-bottom: 1.5rem;">Included:</div>
                         <ul style="list-style: none; color: #cccccc;">
-                            <li style="margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <i class="fas fa-check" style="color: #28a745;"></i> Customer reviews & ratings
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Business listing with category visibility
                             </li>
-                            <li style="margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <i class="fas fa-check" style="color: #28a745;"></i> Business logo
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Basic contact details
                             </li>
-                            <li style="margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <i class="fas fa-check" style="color: #28a745;"></i> Photo gallery (10 photos)
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Standard search placement
                             </li>
-                            <li style="margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <i class="fas fa-check" style="color: #28a745;"></i> Online booking system
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Business logo and photo gallery (up to 10 photos)
                             </li>
-                            <li style="margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <i class="fas fa-check" style="color: #28a745;"></i> Priority in search results
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Enhanced profile visibility
+                            </li>
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Customer review highlights
+                            </li>
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Basic booking system
+                            </li>
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Advanced booking system with calendar sync
+                            </li>
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Customer management dashboard
+                            </li>
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Priority placement in search
+                            </li>
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Basic analytics
+                            </li>
+                            <li style="margin-bottom: 0.5rem; display: flex; align-items: flex-start; gap: 0.5rem;">
+                                <i class="fas fa-check" style="color: #28a745; margin-top: 2px; flex-shrink: 0;"></i> Marketing tools
                             </li>
                         </ul>
                     </div>
-                    <button class="btn-action" onclick="manageSubscription()">
-                        <i class="fas fa-credit-card"></i> Manage Payment
+                    <button class="btn-action" onclick="manageSubscription()" style="margin-top: 1.5rem;">
+                        <i class="fas fa-credit-card"></i> Manage Plan
                     </button>
                 </div>
             </div>
