--- a/business-register.html
+++ b/business-register.html
@@ -55,7 +55,11 @@
         /* Subscription Tiers */
         .subscription-section { background: #1a1a1a; padding: 3rem; border-radius: 15px; border: 1px solid #333; height: fit-content; }
         .subscription-section h2 { font-size: 2rem; font-weight: 600; margin-bottom: 2rem; color: #ffffff; }
-        .subscription-tiers { display: grid; gap: 1.5rem; }
+        .subscription-tiers { 
+            display: grid; 
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); 
+            gap: 1.5rem; 
+        }
         .tier-card { 
             background: #2a2a2a; 
             padding: 2rem; 
@@ -138,7 +142,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="directory.html" class="logo">BLKPAGES</a>
+                <a href="index.html" class="logo">BLKPAGES</a>
                 <ul class="nav-links">
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="search.html">Search</a></li>
@@ -329,22 +333,60 @@
                             </ul>
                         </div>
                         
-                        <!-- Premium Tier -->
-                        <div class="tier-card popular" data-tier="premium" onclick="selectTier('premium')">
+                        <!-- Starter Tier -->
+                        <div class="tier-card" data-tier="starter" onclick="selectTier('starter')">
                             <div class="tier-header">
-                                <div class="tier-name">Premium Listing</div>
-                                <div class="tier-price">£19</div>
+                                <div class="tier-name">Starter</div>
+                                <div class="tier-price">£15</div>
                                 <div class="tier-period">per month</div>
                             </div>
                             <ul class="tier-features">
                                 <li><i class="fas fa-check"></i> Everything in Free</li>
-                                <li><i class="fas fa-check"></i> Customer reviews & ratings</li>
-                                <li><i class="fas fa-check"></i> Business logo</li>
+                                <li><i class="fas fa-check"></i> Business logo and photo gallery (up to 3 photos)</li>
+                                <li><i class="fas fa-check"></i> Enhanced profile visibility</li>
+                                <li><i class="fas fa-check"></i> Customer review highlights</li>
+                                <li><i class="fas fa-check"></i> Basic booking system</li>
+                                <li><i class="fas fa-times unavailable"></i> Advanced booking system with calendar sync</li>
+                                <li><i class="fas fa-times unavailable"></i> Customer management dashboard</li>
+                                <li><i class="fas fa-times unavailable"></i> Priority placement in search</li>
+                            </ul>
+                        </div>
+
+                        <!-- Professional Tier -->
+                        <div class="tier-card popular" data-tier="professional" onclick="selectTier('professional')">
+                            <div class="tier-header">
+                                <div class="tier-name">Professional</div>
+                                <div class="tier-price">£29</div>
+                                <div class="tier-period">per month</div>
+                            </div>
+                            <ul class="tier-features">
+                                <li><i class="fas fa-check"></i> Everything in Starter</li>
                                 <li><i class="fas fa-check"></i> Photo gallery (up to 10 photos)</li>
-                                <li><i class="fas fa-check"></i> Online booking system</li>
-                                <li><i class="fas fa-check"></i> Priority in search results</li>
-                                <li><i class="fas fa-check"></i> Analytics dashboard</li>
-                                <li><i class="fas fa-check"></i> Customer management</li>
+                                <li><i class="fas fa-check"></i> Advanced booking system with calendar sync</li>
+                                <li><i class="fas fa-check"></i> Customer management dashboard</li>
+                                <li><i class="fas fa-check"></i> Priority placement in search</li>
+                                <li><i class="fas fa-check"></i> Basic analytics</li>
+                                <li><i class="fas fa-times unavailable"></i> Advanced analytics (performance trends)</li>
+                                <li><i class="fas fa-times unavailable"></i> Marketing tools</li>
+                            </ul>
+                        </div>
+
+                        <!-- Elite Tier -->
+                        <div class="tier-card" data-tier="elite" onclick="selectTier('elite')">
+                            <div class="tier-header">
+                                <div class="tier-name">Elite</div>
+                                <div class="tier-price">£59</div>
+                                <div class="tier-period">per month</div>
+                            </div>
+                            <ul class="tier-features">
+                                <li><i class="fas fa-check"></i> Everything in Professional</li>
+                                <li><i class="fas fa-check"></i> Unlimited photos & media</li>
+                                <li><i class="fas fa-check"></i> Featured placement across pages</li>
+                                <li><i class="fas fa-check"></i> Advanced analytics (performance trends)</li>
+                                <li><i class="fas fa-check"></i> Marketing tools</li>
+                                <li><i class="fas fa-check"></i> Social media integration</li>
+                                <li><i class="fas fa-check"></i> Priority support</li>
+                                <li><i class="fas fa-check"></i> Custom branding options</li>
                             </ul>
                         </div>
                     </div>
