--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
                             <a href="search-results.html" class="text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium">Browse</a>
                             <a href="offers.html" class="text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium">Offers</a>
                             <a href="blog.html" class="text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium">Blog</a>
+                            <a href="why-list-with-us.html#pricing" class="text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium">Plans</a>
                         </div>
                     <div class="flex items-center space-x-3">
                         <a href="business-register.html" class="px-3 py-2 rounded-full bg-gradient-to-r from-neon-green to-green-500 text-white font-semibold hover:from-green-500 hover:to-green-600 transition-all duration-300 text-sm">
@@ -371,6 +372,7 @@
                             <a href="search-results.html" class="block text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium py-2" onclick="closeMobileMenu()">Browse</a>
                             <a href="offers.html" class="block text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium py-2" onclick="closeMobileMenu()">Offers</a>
                             <a href="blog.html" class="block text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium py-2" onclick="closeMobileMenu()">Blog</a>
+                            <a href="why-list-with-us.html#pricing" class="block text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium py-2" onclick="closeMobileMenu()">Plans</a>
                         </div>
                     
                     <!-- Action Buttons -->
@@ -773,6 +775,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Login Modal -->
     <div id="loginModal" class="fixed inset-0 bg-black/50 backdrop-blur-sm z-50 hidden">
